update: swagger for every request
