# handlers/listBooks.go
@@ -1,4 +1,3 @@
-
 package handlers
 
 import (
@@ -8,6 +7,18 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @BasePath /api/v1
+
+// @Summary List book
+// @Description List all books
+// @Tags Books
+// @Accept json
+// @Produce json
+// @Param request body BookRequest true "Request body"
+// @Success 200 {object} BookResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /books [get]
 func ListBooksHandler(ctx *gin.Context) {
 	book := []schemas.Book{}
 	if err := db.Find(&book).Error; err != nil {
