# handlers/showBook.go
@@ -7,6 +7,18 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @BasePath /api/v1
+
+// @Summary Show book
+// @Description Show a specific book entry
+// @Tags Books
+// @Accept json
+// @Produce json
+// @Param request body BookRequest true "Request body"
+// @Success 200 {object} BookResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /book [get]
 func ShowBookHandler(ctx *gin.Context) {
 	id := ctx.Query("id")
 	if id == "" {
